# ED-Poker

./: CMakeLists.txt  README.md  Relatório Do Projeto.md  calcular_pontuacao.c  capturar_escolha.c  cartas.c  distribui_cartas.c  exibir_mao.c  funcao_principal.c  funcoes_auxiliares.c  inicia_baralho.c  jogar.c  logica_principal.c  main.c  pontuacao.c  teste_pontuacao.c
